# securedelta

./: README.md
client/: CMakeLists.txt
client/dev-test/: main.cc
client/include/: CDCodec.hh
client/src/: CDCodec.cc  rabin.cpp  socket.cc
server/: CMakeLists.txt
server/lib/delta/: .clang-format
server/lib/delta/include/: rabin.h
server/lib/delta/lib/xdelta3/autom4te.cache/: traces.0  traces.1
server/lib/delta/src/: rabin.c
server/src/backend/: backend_facade.hpp  container.hpp  db_wrapper.hpp  name_dispenser.hpp
server/src/comm/: services.hpp
server/src/dedup/: dedup_core.hpp  delta.hpp
server/src/def/: benchmark.hpp  config.hpp  util.hpp
